# trafficops

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  dqn_traffic.pt  dqn_weights.npz  inference.py  models.py  openenv.yaml  pyproject.toml  train_dqn.py
server/: Dockerfile  actions.py  app.py  grading.py  gradio_ui.py  observations.py  tasks.py  trafficops_environment.py
server/sim/: builders.py  engine.py  rl_controller.py  world.py
tests/: test_env.py
